--- a/src/FH.Cache.Core/FH.Cache.Core.csproj
+++ b/src/FH.Cache.Core/FH.Cache.Core.csproj
@@ -7,17 +7,16 @@
     <Authors>kanghua</Authors>
     <Company />
     <Product>Union Cache Core </Product>
-    <PackageReleaseNotes>
-      1.first version
-    </PackageReleaseNotes>
+    <PackageReleaseNotes>1.first version
+</PackageReleaseNotes>
     <PackageTags>Cache,L2Cache</PackageTags>
     <PackageLicenseUrl>https://github.com/491134648/L2CacheUtilities/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/491134648/L2CacheUtilities</PackageProjectUrl>
-    <Description>
-      Implementation of a second-level cache based on .net standard, Memory And Redis
-    </Description>
+    <Description>Implementation of a second-level cache based on .net standard, Memory And Redis
+</Description>
     <AssemblyVersion>0.0.1.0</AssemblyVersion>
     <FileVersion>0.0.1.0</FileVersion>
+    <RepositoryUrl></RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.2.0" />
