--- a/src/FH.Cache.Redis/FH.Cache.Redis.csproj
+++ b/src/FH.Cache.Redis/FH.Cache.Redis.csproj
@@ -19,6 +19,9 @@
     </Description>
     <AssemblyVersion>0.0.1.0</AssemblyVersion>
     <FileVersion>0.0.1.0</FileVersion>
+    <RepositoryUrl>https://github.com/491134648/L2CacheUtilities</RepositoryUrl>
+    <PackageIconUrl>https://github.com/491134648/L2CacheUtilities/blob/master/logo.png</PackageIconUrl>
+    <RepositoryType>github</RepositoryType>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
